playlist rendering
