# app/swagger/swagger.yaml
@@ -220,22 +220,15 @@ paths:
           description: Song or playlist doesn't exist
 
   /playlist/removesong:
-    delete:
+    post:
       tags: [Remove_music_from_playlist]
       operationId: app.remove_music_from_playlist
       summary: Remove a song from the playlist
       parameters:
-        - name: user_token
+        - name: removed_song
           in: body
           schema:
-            $ref: '#/definitions/User_token'
-        - name: song_id
-          in: query
-          type: integer
-        - name: playlist_id
-          in: query
-          type: integer
-
+            $ref: '#/definitions/Removed_Song'
 
       responses:
         200:
@@ -302,10 +295,6 @@ paths:
         - name: playlist_id
           in: query
           type: integer
-        - name: user_token
-          in: body
-          schema:
-            $ref: '#/definitions/User_token'
       responses:
         200:
           description: Listed songs
@@ -372,6 +361,21 @@ paths:
 
 definitions:
   Playlist_song:
+    type: object
+    required:
+      - song_id
+      - playlist_id
+    properties:
+      song_id:
+        type: integer
+        description: song's id
+        example: 1
+      playlist_id:
+        type: integer
+        description: playlists's id
+        example: 1
+
+  Removed_Song:
     type: object
     required:
       - song_id
